@@ -51,6 +51,7 @@
 	- python: bind package removal (#21274).
 	- autoconfigure building python bindings.
 	- autoconfigure generating rpm API doco.
+	- fix: don't fdFree in rpmVerifyScript, rpmtransFree does already.
 
 3.0.6 -> 4.0
 	- use DIRNAMES/BASENAMES/DIRINDICES not FILENAMES in packages and db.
